  clock_getcpuclockid, clock_nanosleep were removed from the librt library
  for new applications (on architectures which had them).  Instead, the
  definitions in libc will be used automatically, which have been available
  since glibc 2.17.

* The obsolete and never-implemented XSI STREAMS header files <stropts.h>
  and <sys/stropts.h> have been removed.

* Support for the "inet6" option in /etc/resolv.conf and the RES_USE_INET6
  resolver flag (deprecated in glibc 2.25) have been removed.

* The obsolete RES_INSECURE1 and RES_INSECURE2 option flags for the DNS stub
  resolver have been removed from <resolv.h>.

* With --enable-bind-now, installed programs are now linked with the
  BIND_NOW flag.

* Support for the PowerPC SPE ISA extension (powerpc-*-*gnuspe*
  configurations) has been removed, following the deprecation of this
  subarchitecture in version 8 of GCC, and its removal in version 9.

* On 32-bit Arm, support for the port-based I/O emulation and the <sys/io.h>
  header have been removed.

* The Linux-specific <sys/sysctl.h> header and the sysctl function have been
  deprecated and will be removed from a future version of glibc.
  Application should directly access /proc instead.  For obtaining random
  bits, the getentropy function can be used.

Changes to build and runtime requirements:

* GCC 6.2 or later is required to build the GNU C Library.

  Older GCC versions and non-GNU compilers are still supported when
  compiling programs that use the GNU C Library.

Security related changes:

  CVE-2019-7309: x86-64 memcmp used signed Jcc instructions to check
  size.  For x86-64, memcmp on an object size larger than SSIZE_MAX
  has undefined behavior.  On x32, the size_t argument may be passed
  in the lower 32 bits of the 64-bit RDX register with non-zero upper
  32 bits.  When it happened with the sign bit of RDX register set,
  memcmp gave the wrong result since it treated the size argument as
  zero.  Reported by H.J. Lu.
